--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
   compile 'com.squareup:otto:1.3.8'
   compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.airbnb.android:epoxy:1.5.0'
 
   //dagger2
   compile 'com.google.dagger:dagger:2.7'
